# melange-webapi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  dune-project  flake.nix  melange-webapi.opam
.github/workflows/: nix.yml  opam.yml
examples/: dom_example.re  dune
scripts/: eventTemplate.re
src/: Webapi.re  dune
src/Webapi/: Webapi__Base64.re  Webapi__Blob.re  Webapi__Canvas.re  Webapi__Dom.re  Webapi__File.re  Webapi__IntersectionObserver.re  Webapi__Performance.re  Webapi__ReadableStream.re  Webapi__Url.re
src/Webapi/Canvas/: Webapi__Canvas__Canvas2d.re  Webapi__Canvas__WebGl.re
src/Webapi/Dom/: Webapi__Dom__AnimationEvent.re  Webapi__Dom__Attr.re  Webapi__Dom__BeforeUnloadEvent.re  Webapi__Dom__CharacterData.re  Webapi__Dom__ChildNode.re  Webapi__Dom__ClipboardEvent.re  Webapi__Dom__CloseEvent.re  Webapi__Dom__CompositionEvent.re  Webapi__Dom__CssStyleDeclaration.re  Webapi__Dom__CustomEvent.re  Webapi__Dom__DedicatedWorkerGlobalScope.re  Webapi__Dom__Document.re  Webapi__Dom__DocumentOrShadowRoot.re  Webapi__Dom__DocumentType.re  Webapi__Dom__DomImplementation.re  Webapi__Dom__DomRect.re  Webapi__Dom__DomStringMap.re  Webapi__Dom__DomTokenList.re  Webapi__Dom__DragEvent.re  Webapi__Dom__Element.re  Webapi__Dom__ErrorEvent.re  Webapi__Dom__Event.re  Webapi__Dom__EventTarget.re  Webapi__Dom__FocusEvent.re  Webapi__Dom__GlobalEventHandlers.re  Webapi__Dom__History.re  (+51 more)
src/canvas/: Canvas2dRe.re
src/file/: FileRe.re  URLSearchParamsRe.re  UrlRe.re
tests/: dune
tests/Webapi/: Webapi__IntersectionObserver__test.re
(+56 files in other folders)
